--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-Flask>=2.0
-prometheus_flask_exporter>=0.20.0
-gunicorn>=20.0
+Flask>=3.0.0,<3.1.0
+prometheus_flask_exporter==0.23.2
+gunicorn>=22.0.0,<23.0.0
