add env section for prometheus client

--- a/k8s/deployment-dev.yaml
+++ b/k8s/deployment-dev.yaml
@@ -27,5 +27,5 @@ spec:
           ports:
             - containerPort: 5000
           env:
-            - name: PROMETHEUS_MULTIPROC_DIR
-              value: /tmp/prometheus_multiproc_dir
+            - name: prometheus_multiproc_dir
+              value: /tmp
