modify for metric tests

--- a/k8s/deployment-dev.yaml
+++ b/k8s/deployment-dev.yaml
@@ -28,4 +28,4 @@ spec:
             - containerPort: 5000
           env:
             - name: prometheus_multiproc_dir
-              value: /tmp
+              value: /tmp/prometheus_multiproc_dir
