--- a/k8s/service-dev.yaml
+++ b/k8s/service-dev.yaml
@@ -11,7 +11,7 @@ spec:
     app: system-load-demonstrator-dev
   ports:
     - name: http-metrics
-    - protocol: TCP
+      protocol: TCP
       port: 80 # Port the service listens on within the cluster
       targetPort: 5000 # Flask app port
   type: NodePort
