--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -59,21 +59,21 @@ jobs:
       - name: Display Manual Dev Deployment Instructions
         run: |
           echo "---------------------------------------------------------------------"
-          echo "✅ DEV Docker image successfully built and pushed to GHCR!"
+          echo "DEV Docker image successfully built and pushed to GHCR!"
           echo ""
           echo "Image Base Name: ${{ env.IMAGE_NAME }}"
           echo "Pushed tags for this dev build (example): ${{ env.IMAGE_NAME }}:dev, ${{ env.IMAGE_NAME }}:${{ github.sha_short }}"
           echo "(Check GHCR for the exact list of tags pushed by this run)"
           echo ""
-          echo "👉 To deploy THIS DEV IMAGE to your LOCAL Minikube for testing:"
+          echo "To deploy THIS DEV IMAGE to your LOCAL Minikube for testing:"
           echo "---------------------------------------------------------------------"
           echo "1. Ensure Minikube is running."
           echo ""
           echo "2. Create a NEW deployment YAML (e.g., k8s/deployment-dev.yaml) or temporarily modify your existing k8s/deployment.yaml."
           echo "   Update the 'image:' field to point to one of THIS dev image's specific tags:"
           echo "     Option A (using the branch tag): image: ${{ env.IMAGE_NAME }}:dev"
-          echo "     Option B (using the commit SHA tag for precision): image: ${{ env.IMAGE_NAME }}:${{ github.sha_short }}"
-          echo "     imagePullPolicy: Always # Or IfNotPresent, especially for SHA tags"
+          echo "     Option B (using the commit SHA tag): image: ${{ env.IMAGE_NAME }}:${{ github.sha_short }}"
+          echo "     imagePullPolicy: Always"
           echo ""
           echo "   If creating a new deployment YAML (e.g., k8s/deployment-dev.yaml), give it a unique name and labels (e.g., system-load-demonstrator-dev)."
           echo ""
